<resources>
    <string name="app_name">RowBot</string>

    <!-- Common strings -->
    <string name="back">Back</string>
    <string name="next">Next</string>
    <string name="create">Create</string>
    <string name="save">Save</string>
    <string name="edit">Edit</string>
    <string name="submit">Submit</string>
    <string name="no_profile_found">No profile found.</string>

    <!-- Navigation drawer text -->
    <string name="rowbot_nav_drawer_home">Home</string>
    <string name="rowbot_nav_drawer_debug">Debug</string>
    <string name="rowbot_nav_drawer_settings">Settings</string>
    <string name="rowbot_nav_drawer_help_and_feedback">Help &amp; Feedback</string>
    <string name="nav_drawer_new_profile">Create Profile</string>

    <!-- Fragment titles -->
    <string name="rowbot_frag_debug">RowBot - Debug</string>
    <string name="rowbot_frag_settings">RowBot - Settings</string>
    <string name="rowbot_frag_help">RowBot - Help &amp; Feedback</string>

    <!-- Send feedback dialog -->
    <string name="send_feedback_progress_dialog_message">Sending feedback...</string>

    <!-- Welcome dialog -->
    <string name="welcome_dialog_title">Welcome to RowBot</string>
    <string name="welcome_dialog_forward">The RowBot app is intended to aid in all things
        rowing. This app is and always will remain free.</string>
    <string name="welcome_dialog_message">
        The current RowBot version you are running is in Beta testing and is used to collect data
        only. Any data that is collected during the use of this app may be sent to the developers
        of the app for further analysis. This data will help us provide a better product for you in
        future releases. Data that may be sent to the developers includes (but is not limited to):
    </string>
    <string-array name="welcome_dialog_list">
        <item>Accelerometer sensor data</item>
        <item>Gyroscope sensor data</item>
        <item>Gravity sensor data</item>
    </string-array>

    <!-- Release notes -->
    <string name="release_notes_a_1_0"><![CDATA[<p>RowBot\'s first release!</p><p>RowBot is intended
        to provide a cheap platform for rowers and coaches for a fun and productive practice. The
        project is currently and is intended to remain free (other costs may include the actual
        hardware required).</p><p>The current version of RowBot is intended to crowd source sensor
        data to provide the developers a wide set of sample data. We encourage rowers of all ages,
        genders, skill levels, and boat types to use this application while exercising. Data
        collected during the use will be sent to the developers for analysis (over WiFi only to
        avoid using your data plan). This analysis will be used to generate new algorithms that will
        provide you, the user, with better and more accurate rowing analysis.</p><p>The data we
        collect:<br/>&bull; Accelerometer Sensor Data<br/>&bull; Gyroscope Sensor Data<br/>&bull;
        Gravity Sensor Data<br/>The data gathered can be sent completely anonymously. While
        anonymity is guaranteed to always be an option, some additional data does help us provide
        you with better analysis. This data includes:<br/>&bull; Gender<br/>&bull; Age<br/>&bull;
        Boat type (1x, 2-, 2x, 4-, 4+, 4x, 8+, 8x)</p>]]></string>
    <string name="release_notes_a_1_1"><![CDATA[
        &bull; Minor bug fixes.<br/>
        &bull; Added support for profiles (creation, modification, deletion, and switching).
        ]]></string>
    <string name="release_notes_a_1_2"><![CDATA[
        &bull; Enhances look of switches (can be found in weight units switch in the profile
                creation/edit dialog).
        ]]></string>
    <string name="release_notes_a_1_3"><![CDATA[
        &bull; Fixes for screen rotation.<br/>
        &bull; Added access to current bugs for Alpha users.<br/>
        &bull; Replaced tabs in home page with FAB.
        ]]></string>

    <!-- Buglist page -->
    <string name="buglist_error_connecting_to_github">Error connecting to GitHub, click here to
        enter your Alpha-Tester\'s password (hint: the password is on our Google group
        page).</string>
    <string name="buglist_get_github_password_dialog_title">Enter GitHub Password:</string>
    <string name="buglist_get_github_password_dialog_hint">GitHub Password</string>

    <!-- Help and Feedback page-->
    <string name="help_contact_us_title">Contact Us</string>
    <string name="help_feedback">Feedback</string>
    <string name="help_documents_title">Documentation</string>
    <string-array name="feedback_type">
        <item>Bug Report</item>
        <item>Feature Request</item>
    </string-array>
    <string name="bug_report_description_hint">What went wrong?</string>
    <string name="bug_report_repro_hint">How can we reproduce this bug?</string>
    <string name="feature_request_description_hint">What would you like to see us do better?</string>

    <!-- Create profile dialog -->
    <string name="profile_dialog_create_title">Create a Profile</string>
    <string name="profile_dialog_edit_title">Edit your Profile</string>
    <string name="profile_dialog_name_hint">Your name...</string>
    <string name="profile_dialog_team_name_hint">Your team\'s name...</string>
    <string name="profile_dialog_birthday_hint">What\'s your birthday?</string>
    <string name="profile_dialog_weight_hint">What\'s your weight?</string>
    <string name="profile_dialog_weight_units_metric">Kgs</string>
    <string name="profile_dialog_weight_units_standard">Lbs</string>
    <string name="settings_provide_statistics_label">Send use statistics and gathered
        data (over WiFi) to the developers. Data collected this way will be used to provide new and
        more accurate features in future releases of this application.</string>
    <string name="settings_apply_age_adjustment">Automatically apply my age adjustment
        to my workouts.</string>
    <string name="settings_apply_weight_adjustment">Automatically use my weight to show
        my weight adjusted pace in my workouts.</string>
    <string name="settings_apply_boat_adjustment">Automatically account for my boat
        type when computing my pace in my workouts (you must select a boat type below).</string>
    <string name="settings_boat_type">Boat type:</string>
    <string name="settings_data_resolution">Data Resolution:</string>

    <array name="gender">
        <item>Prefer not to say</item>
        <item>Male</item>
        <item>Female</item>
    </array>

    <array name="boat_types">
        <item>Unspecified</item>
        <item>1x</item>
        <item>2-</item>
        <item>2x</item>
        <item>4+</item>
        <item>4-</item>
        <item>4x</item>
        <item>8+</item>
        <item>Mixed 2x</item>
        <item>Mixed 4+</item>
        <item>Mixed 4-</item>
        <item>Mixed 4x</item>
        <item>Mixed 8+</item>
    </array>

    <array name="data_resolutions">
        <item>Low</item>
        <item>Medium</item>
        <item>High</item>
    </array>

    <!-- Settings page -->
    <string name="settings_name">User Name...</string>
    <string name="settings_club">Club Name...</string>
    <string name="settings_share_data_title">Provide use statistics and data.</string>
    <string name="settings_share_data_description">Send use statistics and gathered data (over WiFi)
        to the developers. Data collected this way will be used to provide new and more accurate
        features in future releases of this application.</string>
    <string name="settings_delete_button">Delete Profile</string>
    <string name="settings_delete_dialog_title">Delete Profile?</string>
    <string name="settings_delete_dialog_message">Are you sure you want to delete profile \'%1$s\'?
        This action cannot be undone.</string>

    <!-- Debug page -->
    <string-array name="debug_command_list">
        <item>GET_STATUS</item>
        <item>GET_ODOMETER</item>
        <item>GET_WORK_TIME</item>
        <item>GET_WORK_DISTANCE</item>
        <item>GET_WORK_CALORIES</item>
        <item>GET_STORED_WORKOUT_NUMBER</item>
        <item>GET_PACE</item>
        <item>GET_STROKE_RATE</item>
        <item>GET_USER_INFO</item>
        <item>GET_HEART_RATE</item>
        <item>GET_POWER</item>
        <item>SET_TIME</item>
        <item>SET_DATE</item>
        <item>SET_TIMEOUT</item>
        <item>SET_GOAL_TIME</item>
        <item>SET_GOAL_DISTANCE</item>
        <item>SET_GOAL_CALORIES</item>
        <item>SET_GOAL_POWER</item>
        <item>SET_WORKOUT_NUMBER_0</item>
        <item>SET_WORKOUT_NUMBER_1</item>
        <item>GET_WORKOUT_TYPE</item>
        <item>GET_DRAG_FACTOR</item>
        <item>GET_STROKE_STATE</item>
        <item>GET_HIGH_RES_WORK_TIME</item>
        <item>GET_HIGH_RES_WORK_DISTANCE</item>
        <item>GET_ERROR_VALUE</item>
        <item>GET_WORKOUT_STATE</item>
        <item>GET_WORKOUT_INTERVAL_COUNT</item>
        <item>GET_INTERVAL_TYPE</item>
        <item>GET_REST_TIME</item>
        <item>SET_SPLIT_TIME</item>
        <item>SET_SPLIT_DISTANCE</item>
        <item>GET_FORCE_PLOT</item>
        <item>GET_HEART_RATE_PLOT</item>
        <item>SET_SCREEN_ERROR_MODE</item>
        <item>GO_STATE_RESET</item>
        <item>GO_STATE_IDLE</item>
        <item>GO_STATE_HAVE_ID</item>
        <item>GO_STATE_IN_USE</item>
        <item>GO_STATE_FINISHED</item>
        <item>GO_STATE_READY</item>
        <item>GO_STATE_BAD_ID</item>
        <item>Execute Last Batch</item>
        <item>100m @ 200W</item>
        <item>Get Data</item>
    </string-array>

    <!-- Profile card -->
    <string name="profile_default_user_name">Your Name</string>
    <string name="profile_default_team_name">Team Name</string>
    <string name="profile_season_meters">Season Meters: %1$sm</string>
    <string name="profile_lifetime_meters">Lifetime Meters: %1$sm</string>

    <!-- Profile page -->
    <string name="profile_page_title">Profile Details</string>

    <!-- PR list item -->
    <string name="pr_item_hour_time">HH:mm:ss.S</string>
    <string name="pr_item_minute_time">mm:ss.S</string>
    <string name="pr_item_value">%1$s @ %2$d SR</string>
</resources>
