<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:id="@+id/basic_info_page"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.rowbot.ui.widgets.ImageRailView
            android:id="@+id/image_rail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <EditText
            android:id="@+id/user_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:hint="@string/profile_dialog_name_hint"/>

        <EditText
            android:id="@+id/team_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:hint="@string/profile_dialog_team_name_hint"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/detail_page"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:orientation="vertical"
        android:visibility="gone">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="@dimen/profile_edit_icon_size"
                android:layout_height="@dimen/profile_edit_icon_size"
                android:layout_marginRight="4dp"
                android:src="@drawable/ic_age"/>

            <EditText
                android:id="@+id/birthday"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:editable="false"
                android:clickable="true"
                android:focusable="false"
                android:hint="@string/profile_dialog_birthday_hint"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="@dimen/profile_edit_icon_size"
                android:layout_height="@dimen/profile_edit_icon_size"
                android:layout_marginRight="4dp"
                android:src="@drawable/ic_weight"/>

            <EditText
                android:id="@+id/weight"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:inputType="number"
                android:hint="@string/profile_dialog_weight_hint"/>

            <Switch
                android:id="@+id/weight_units"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:showText="true"
                android:textOff="@string/profile_dialog_weight_units_standard"
                android:textOn="@string/profile_dialog_weight_units_metric"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="@dimen/profile_edit_icon_size"
                android:layout_height="@dimen/profile_edit_icon_size"
                android:layout_marginRight="4dp"
                android:src="@drawable/ic_gender"/>

            <Spinner
                android:id="@+id/gender"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/gender"/>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/settings_page"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:orientation="vertical"
        android:visibility="gone">

        <CheckBox
            android:id="@+id/provide_statistics"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="top"
            android:text="@string/settings_provide_statistics_label"/>

        <CheckBox
            android:id="@+id/apply_age_adjustment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:gravity="top"
            android:text="@string/settings_apply_age_adjustment"/>

        <CheckBox
            android:id="@+id/apply_weight_adjustment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:gravity="top"
            android:text="@string/settings_apply_weight_adjustment"/>

        <CheckBox
            android:id="@+id/apply_boat_adjustment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:gravity="top"
            android:text="@string/settings_apply_boat_adjustment"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/settings_boat_type"/>

            <!-- Spacer -->
            <View
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"/>

            <Spinner
                android:id="@+id/boat_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:entries="@array/boat_types"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/settings_data_resolution"/>

            <!-- Spacer -->
            <View
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"/>

            <Spinner
                android:id="@+id/data_resolution"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:entries="@array/data_resolutions"/>

        </LinearLayout>

    </LinearLayout>

    <ProgressBar
        android:id="@+id/progress"
        style="@style/Widget.AppCompat.ProgressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:indeterminate="true"
        android:visibility="gone"/>

</RelativeLayout>