<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="15dp"
    android:paddingRight="15dp"
    android:paddingTop="20dp"
    android:paddingBottom="20dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:text="@string/help_contact_us_title"
        android:textColor="@color/rowbot_dark_gray"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/feedback"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:text="@string/help_feedback"
        android:drawableLeft="@mipmap/ic_feedback"
        android:drawablePadding="15dp"
        android:paddingLeft="15dp"/>

    <!-- Divider -->
    <View
        android:id="@+id/divider1"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:background="@android:color/darker_gray"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:text="@string/help_documents_title"
        android:textColor="@color/rowbot_dark_gray"
        android:textStyle="bold"/>

    <ListView
        android:id="@+id/document_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</LinearLayout>