<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingLeft="24dp"
    android:paddingRight="24dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="@dimen/profile_edit_icon_size"
            android:layout_height="@dimen/profile_edit_icon_size"
            android:layout_marginRight="4dp"
            android:src="@drawable/ic_age"/>

        <EditText
            android:id="@+id/birthday"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:editable="false"
            android:clickable="true"
            android:focusable="false"
            android:hint="@string/profile_dialog_birthday_hint"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="@dimen/profile_edit_icon_size"
            android:layout_height="@dimen/profile_edit_icon_size"
            android:layout_marginRight="4dp"
            android:src="@drawable/ic_weight"/>

        <EditText
            android:id="@+id/weight"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="number"
            android:hint="@string/profile_dialog_weight_hint"/>

        <Switch
            android:id="@+id/weight_units"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:showText="true"
            android:textOff="@string/profile_dialog_weight_units_standard"
            android:textOn="@string/profile_dialog_weight_units_metric"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="@dimen/profile_edit_icon_size"
            android:layout_height="@dimen/profile_edit_icon_size"
            android:layout_marginRight="4dp"
            android:src="@drawable/ic_gender"/>

        <Spinner
            android:id="@+id/gender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/gender"/>

    </LinearLayout>

</LinearLayout>