<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp">

    <LinearLayout
        android:id="@+id/account_picker"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:paddingLeft="4dp"
        android:paddingRight="4dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/account_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>

        <com.rowbot.ui.widgets.ImageViewCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_drop_down"
            app:tint="?attr/colorControlNormal"/>

    </LinearLayout>

    <Spinner
        android:id="@+id/feedback_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:entries="@array/feedback_type"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginTop="8dp"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/bug_report"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/bug_report_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/bug_report_description_hint"/>

                <EditText
                    android:id="@+id/bug_report_repro"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:hint="@string/bug_report_repro_hint"/>

            </LinearLayout>

            <EditText
                android:id="@+id/feature_request"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/feature_request_description_hint"
                android:visibility="gone"/>

        </LinearLayout>

    </ScrollView>

    <Button
        android:id="@+id/submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/submit"/>

</LinearLayout>